# DirectEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
DirectEngine/: CMakeLists.txt  DirectEngine.cpp  Helpers.h  materials.txt
DirectEngine/core/: Audio.cpp  Audio.h  CMakeLists.txt  Collision.cpp  Collision.h  ComStack.cpp  ComStack.h  Common.h  Constants.h  Coroutine.h  DirectXRaytracingHelper.h  EngineCore.cpp  EngineCore.h  IGame.h  Input.cpp  Input.h  Log.cpp  Log.h  Materials.cpp  Materials.h  Memory.cpp  Memory.h  Mesh.cpp  Mesh.h  ShadowMap.cpp  ShadowMap.h  Texture.cpp  Texture.h  UI.cpp  UI.h  Vertex.h  Window.cpp  XR.cpp  XR.h
DirectEngine/game/: Assets.cpp  Assets.h  CMakeLists.txt  Config.cpp  Config.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameUI.cpp  Gizmo.cpp  Gizmo.h  IEntityCreator.h  IGame.h  Log.cpp  Log.h  Mesh.cpp  Mesh.h  Physics.cpp  Physics.h  Puzzle.cpp  Puzzle.h
DirectEngine/imgui/: ImGuiProfilerRenderer.h  remixicon.h
DirectEngine/models/: DamagedHelmet.glb  Sponza.glb  arrow.glb  cube.glb  kaiju-new.gltf  kaiju.glb  kaiju.mtl  level1.glb  log1.glb  rotate-arrow.glb  scale-arrow.glb  skybox-cube.glb  testcube.gltf  testlevel.glb  translate-arrow.glb
DirectEngine/shaders/: aabb.hlsl  bones.hlsl  common.hlsl  debugline.hlsl  entity.hlsl  ground.hlsl  imgui.ini  laser.hlsl  shaders.hlsl  shadertoolsconfig.json  shadow.hlsl  xrview.hlsl
DirectEngine/shaders/compile/: aabb.hlsl  bones.hlsl  entity.hlsl  ground.hlsl  laser.hlsl  portal.hlsl  shadow.hlsl  texturequad.hlsl
DirectEngine/shaders/compile/compute/: generateShell.hlsl  textransform.hlsl
DirectEngine/shaders/compile/rasterize/: aabb.hlsl  bones.hlsl  crosshair.hlsl  debugline.hlsl  entity-skinned.hlsl  entity.hlsl  gBufferNormal.hlsl  gbuffer.hlsl  ground.hlsl  laser.hlsl  portal.hlsl  shadow.hlsl  shell.hlsl  shelltexture.hlsl  skybox.hlsl  stencilWrite.hlsl  texturequad.hlsl
DirectEngine/shaders/compile/raytrace/: shadow.hlsl
DirectEngine/shaders/util/: common.hlsl
DirectEngine/tests/: Animation.cpp  CMakeLists.txt  EngineTest.cpp  GameTest.cpp  TestCommon.h  Tests.cpp
DirectEngine/textures/: Material_MR_D.dds  Material_MR_M.dds  Material_MR_MR.dds  Material_MR_R.dds  ambientLUT.dds  body_MR.dds  body_R.dds  cat.dds  log01_D.dds  log01_MR.dds  log01_R.dds  log02_MR.dds  skyfire_irradiance.dds  skyfire_radiance.dds
DirectEngine/textures/sponza/: 1219024358953944284.dds  2051777328469649772.dds  2185409758123873465.dds  2299742237651021498.dds  2411100444841994089.dds  2775690330959970771.dds  2969916736137545357.dds  332936164838540657.dds  3371964815757888145.dds  3455394979645218238.dds  3628158980083700836.dds  3827035219084910048.dds  4477655471536070370.dds  466164707995436622.dds  4675343432951571524.dds  4871783166746854860.dds  4975155472559461469.dds  5061699253647017043.dds  5792855332885324923.dds  5823059166183034438.dds  6047387724914829168.dds  6151467286084645207.dds  6593109234861095314.dds  6667038893015345571.dds  6772804448157695701.dds  715093869573992647.dds  7268504077753552595.dds  7441062115984513793.dds  755318871556304029.dds  759203620573749278.dds  7645212358685992005.dds  7815564343179553343.dds  8006627369776289000.dds  8051790464816141987.dds  8114461559286000061.dds  8481240838833932244.dds  8503262930880235456.dds  8747919177698443163.dds  8750083169368950601.dds  8773302468495022225.dds  (+3 more)
GltfMaterialExtract/: CMakeLists.txt  GltfMaterialExtract.cpp
ShaderPreCompile/: CMakeLists.txt  ShaderPreCompile.cpp
Tools/: create-icon-header.py  remixicon.h
Tools/blender/: arrow.blend  log.blend  log.blend1  testcube.blend  testlevel.blend
Tools/nsight/DirectEngine/: .gitignore  DirectEngine.ngfx-proj
