project("GltfMaterialExtract")
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
add_executable(${PROJECT_NAME} "GltfMaterialExtract.cpp")
target_compile_definitions(${PROJECT_NAME} PRIVATE "UNICODE;_UNICODE")
target_compile_options(${PROJECT_NAME} PUBLIC -std:c++20 /Zc:strictStrings- /wd4244 /wd4267 /wd4305)